Fixed scrollbar on create recipe

--- a/src/index.css
+++ b/src/index.css
@@ -90,50 +90,43 @@ body {
 option span {
   color: #3e4753;
 }
-.MuiDialog-paper .MuiPaper-root {
-  overflow: hidden;
-}
-
-.MuiDialog-paper .MuiPaper-root::-webkit-scrollbar {
-  width: 12px;
-}
-
-MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container::-webkit-scrollbar-thumb {
-  background-color: #1FB137;
-  border-radius: 6px;
-}
-
-.MuiDialog-paper .MuiPaper-root::-webkit-scrollbar-track {
-  background-color: black;
-}
 ::placeholder{ 
   color: #3e4753;
   }
-  /* ::-webkit-scrollbar {
+  /* MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container::-webkit-scrollbar-thumb {
+    background-color: #1FB137;
+    border-radius: 6px;
+  } 
+  .contain::-webkit-scrollbar-thumb {
+    background-color: #1FB137;
+    border-radius: 6px;
+  }
+  .MuiPaper-root::-webkit-scrollbar-thumb {
+    background-color: #1FB137;
+    border-radius: 6px;
+  }
+  .MuiDialog-container::-webkit-scrollbar-thumb {
+    background-color: #1FB137;
+    border-radius: 6px;
+  } */
+  .MuiDialog-root {
+    overflow: hidden;
+  }
+  div::-webkit-scrollbar {
+    display: none;
+  }
+  ::-webkit-scrollbar {
     width: 10px;
-    margin-right:10px
   }
 
   ::-webkit-scrollbar-thumb {
     background-color: #1f2220;
     border-radius: 10px;
-    padding:5px;
   }
 
   ::-webkit-scrollbar-track {
-    padding: 2px;
     background-color: #000000;
-    padding:5px;
-  } */
-body, html,select,div, textarea {
-
-
-  scrollbar-width: thin; /* For Firefox */
-  scrollbar-color: #1FB137 #1F1F1F; /* For Firefox */
-
-  /* For webkit browsers (Chrome, Safari, etc.) */
-  
-}
+  }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -199,4 +192,7 @@ input:-webkit-autofill{
 }
 img, .content {
   transition: 0.7s all;
+}
+.create-recipe {
+  background-image: url("./images/create-recipe.jpg");
 }
